[Simon] Spot all the bugs